--- a/server/machineLearning/ml_test/Anonyjob Model Testing for Orientation.ipynb
+++ b/server/machineLearning/ml_test/Anonyjob Model Testing for Orientation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -178,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f3b9c90d780>"
+       "<matplotlib.text.Text at 0x7f15ade41438>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -195,7 +195,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYUAAAEJCAYAAAB7UTvrAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAF8JJREFUeJzt3Xu4HXV97/H3x1C0KhaRoH3CJajpJQesYgx4Ld56QrVA\nFStRrNgqrW0OePBUsVUUjlovR63WHCvesIoGRPGkEklFjXc52dzEQKNpRAnakgIHb0cg8O0fM3uy\n2O7L2mFPdsh+v55nP1kz81uzvrMyaz5zWfNbqSokSQK412wXIEnadRgKkqSOoSBJ6hgKkqSOoSBJ\n6hgKkqSOoSBJ6hgKkqSOoSBJ6uwx2wVM17777lsLFy6c7TIk6R7l0ksv/Y+qmj9Vu3tcKCxcuJCR\nkZHZLkOS7lGSfH+Ydp4+kiR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUqfXUEiyLMnG\nJJuSnDZBmz9KcnWSDUk+1mc9kqTJ9XZHc5J5wErg6cAWYH2S1VV19UCbRcCrgMdX1c1J9uurHklz\n08LTLpztEmbMtW96Ru+v0eeRwlJgU1VtrqrbgFXAMWPavARYWVU3A1TVDT3WI0maQp+hsAC4bmB4\nSztu0G8Av5Hka0m+mWTZeDNKclKSkSQjW7du7alcSdJsX2jeA1gEHAksB96XZO+xjarqrKpaUlVL\n5s+fspM/SdIO6jMUrgcOGBjevx03aAuwuqpur6rvAd+hCQlJ0izoMxTWA4uSHJxkT+B4YPWYNp+m\nOUogyb40p5M291iTJGkSvYVCVW0DVgBrgWuA86pqQ5IzkxzdNlsL3JjkauCLwF9V1Y191SRJmlyv\nP7JTVWuANWPGnT7wuIBT2z9J0iyb7QvNkqRdiKEgSerc436j+e7wzkZJmpxHCpKkjqEgSeoYCpKk\nzpy6pqC5a65fT9pdlt9raf3zSEGS1PFIYQ5xb1HSVDxSkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJ\nUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUqfXUEiyLMnGJJuS\nnDbO9BOTbE1yRfv34j7rkSRNrrdfXksyD1gJPB3YAqxPsrqqrh7T9NyqWtFXHZKk4fV5pLAU2FRV\nm6vqNmAVcEyPrydJupv6DIUFwHUDw1vacWM9O8m3kpyf5IDxZpTkpCQjSUa2bt3aR62SJGb/QvM/\nAQur6hHA54APj9eoqs6qqiVVtWT+/Pk7tUBJmkv6DIXrgcE9//3bcZ2qurGqbm0H3w88usd6JElT\n6DMU1gOLkhycZE/geGD1YIMkvz4weDRwTY/1SJKm0Nu3j6pqW5IVwFpgHvDBqtqQ5ExgpKpWAycn\nORrYBtwEnNhXPZKkqfUWCgBVtQZYM2bc6QOPXwW8qs8aJEnDm+0LzZKkXYihIEnqGAqSpI6hIEnq\nGAqSpI6hIEnqGAqSpI6hIEnqGAqSpI6hIEnqGAqSpI6hIEnqGAqSpI6hIEnqGAqSpI6hIEnqGAqS\npI6hIEnqGAqSpI6hIEnqGAqSpI6hIEnqGAqSpI6hIEnqGAqSpE6voZBkWZKNSTYlOW2Sds9OUkmW\n9FmPJGlyvYVCknnASuAoYDGwPMnicdrtBZwCXNJXLZKk4fR5pLAU2FRVm6vqNmAVcMw47f4n8Gbg\nFz3WIkkaQp+hsAC4bmB4Szuuk+Qw4ICqunCyGSU5KclIkpGtW7fOfKWSJGAWLzQnuRfwduDlU7Wt\nqrOqaklVLZk/f37/xUnSHNVnKFwPHDAwvH87btRewCHAuiTXAkcAq73YLEmzp89QWA8sSnJwkj2B\n44HVoxOr6paq2reqFlbVQuCbwNFVNdJjTZKkSfQWClW1DVgBrAWuAc6rqg1JzkxydF+vK0nacXv0\nOfOqWgOsGTPu9AnaHtlnLZKkqXlHsySpYyhIkjqGgiSpYyhIkjqGgiSpYyhIkjqGgiSpYyhIkjqG\ngiSpM+kdzUn2mWx6Vd00s+VIkmbTVN1cXAoUkHGmFfDQGa9IkjRrJg2Fqjp4ZxUiSZp9Q11TSOOE\nJK9phw9MsrTf0iRJO9uwF5r/N/BY4Hnt8E+Alb1UJEmaNcN2nX14VR2W5HKAqrq5/eEcSdJuZNgj\nhduTzKO5uEyS+cCdvVUlSZoVw4bCu4ALgP2SvAH4KvDG3qqSJM2KoU4fVdU5SS4Fnkrz9dRjq+qa\nXiuTJO1007l57Qbg44PTvHlNknYv07l57UDg5vbx3sAPAO9jkKTdyKTXFKrq4Kp6KHAx8AdVtW9V\nPQh4JvDPO6NASdLOM+yF5iOqas3oQFV9FnhcPyVJkmbLsPcp/DDJq4GPtsPPB37YT0mSpNky7JHC\ncmA+zddSLwD2a8dJknYjw34l9SbglCR7NYP1037LkiTNhmE7xDu07eLi28CGJJcmOWSI5y1LsjHJ\npiSnjTP9z5NcleSKJF9Nsnj6iyBJminDnj56L3BqVR1UVQcBLwfOmuwJbbcYK4GjgMXA8nE2+h+r\nqkOr6pHAW4C3T6t6SdKMGjYU7ldVXxwdqKp1wP2meM5SYFNVba6q24BVwDGDDarqx4OvQdu3kiRp\ndgz77aPN7W8pfKQdPgHYPMVzFgDXDQxvAQ4f2yjJXwKnAnsCTxmyHklSD4Y9UvgTmm8ffar9m9+O\nu9uqamVVPQx4JfDq8dokOSnJSJKRrVu3zsTLSpLGMey3j24GTp7mvK8HDhgY3r8dN5FVwHsmeP2z\naK9hLFmyxFNMktSTqTrEWz3Z9Ko6epLJ64FFSQ6mCYPj2f7LbaPzX1RV320HnwF8F0nSrJnqSOGx\nNNcFPg5cQtMZ3lCqaluSFcBaYB7wwarakORMYKSqVgMrkjwNuJ2ms70X7sAySJJmyFSh8BDg6TR3\nLz8PuBD4eFVtGGbmbX9Ja8aMO33g8SnTqlaS1Kupekm9o6ouqqoXAkcAm4B17RGAJGk3M+WF5iT3\npjnfvxxYyPaf5pQk7WamutD8j8AhNKeAzqiqb++UqiRJs2KqI4UTgJ8BpwAnJ9115tB0jPeAHmuT\nJO1kk4ZCVQ17c5skaTfgRl+S1DEUJEkdQ0GS1DEUJEkdQ0GS1DEUJEkdQ0GS1DEUJEkdQ0GS1DEU\nJEkdQ0GS1DEUJEkdQ0GS1DEUJEkdQ0GS1DEUJEkdQ0GS1DEUJEkdQ0GS1DEUJEmdXkMhybIkG5Ns\nSnLaONNPTXJ1km8l+XySg/qsR5I0ud5CIck8YCVwFLAYWJ5k8ZhmlwNLquoRwPnAW/qqR5I0tT6P\nFJYCm6pqc1XdBqwCjhlsUFVfrKqft4PfBPbvsR5J0hT6DIUFwHUDw1vacRP5U+CzPdYjSZrCHrNd\nAECSE4AlwO9OMP0k4CSAAw88cCdWJklzS59HCtcDBwwM79+Ou4skTwP+Bji6qm4db0ZVdVZVLamq\nJfPnz++lWElSv6GwHliU5OAkewLHA6sHGyR5FPBemkC4ocdaJElD6C0UqmobsAJYC1wDnFdVG5Kc\nmeTottlbgfsDn0hyRZLVE8xOkrQT9HpNoarWAGvGjDt94PHT+nx9SdL0eEezJKljKEiSOoaCJKlj\nKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiS\nOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKnTaygkWZZkY5JNSU4bZ/qT\nklyWZFuS4/qsRZI0td5CIck8YCVwFLAYWJ5k8ZhmPwBOBD7WVx2SpOHt0eO8lwKbqmozQJJVwDHA\n1aMNquradtqdPdYhSRpSn6ePFgDXDQxvacdJknZR94gLzUlOSjKSZGTr1q2zXY4k7bb6DIXrgQMG\nhvdvx01bVZ1VVUuqasn8+fNnpDhJ0i/rMxTWA4uSHJxkT+B4YHWPrydJupt6C4Wq2gasANYC1wDn\nVdWGJGcmORogyWOSbAGeA7w3yYa+6pEkTa3Pbx9RVWuANWPGnT7weD3NaSVJ0i7gHnGhWZK0cxgK\nkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSO\noSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6hgKkqSOoSBJ6vQaCkmWJdmY\nZFOS08aZfu8k57bTL0mysM96JEmT6y0UkswDVgJHAYuB5UkWj2n2p8DNVfVw4B3Am/uqR5I0tT6P\nFJYCm6pqc1XdBqwCjhnT5hjgw+3j84GnJkmPNUmSJtFnKCwArhsY3tKOG7dNVW0DbgEe1GNNkqRJ\n7DHbBQwjyUnASe3gT5NsnM16hrAv8B99vkB23RNtLnvP5vLyz+Vlh7u9/AcN06jPULgeOGBgeP92\n3HhttiTZA/g14MaxM6qqs4CzeqpzxiUZqaols13HbHDZ5+ayw9xe/t1p2fs8fbQeWJTk4CR7AscD\nq8e0WQ28sH18HPCFqqoea5IkTaK3I4Wq2pZkBbAWmAd8sKo2JDkTGKmq1cAHgI8k2QTcRBMckqRZ\n0us1hapaA6wZM+70gce/AJ7TZw2z5B5zqqsHLvvcNZeXf7dZ9ni2RpI0ym4uJEmd3ToUkixMUkme\n3A7vmeTm9lrHeO3PTnJI+7zfGxj/3h5qm3CeSV6X5Jnt40ry3PbxIUnOHqh1fZIvJflskvsP+boL\nk2xNsq59/k65jtO+3v2TnDj6/o++B+3ybhi9cTHJ+W2ds1LrJMuwV5J/auv5RpJLk/zRwPSDklw8\n3fVuyNdemOT8HXzuQ5KcMcG0RyZZOlW7Mc85Mcl32/fhK7PVPU1bx2NncH7de5xkUZKRJAe2n7XP\nDrQbaf89MsltSfZvh1ckOXHMPP+g7cLnq0neOTD+J+37ty7JoTO1DDNhtw6F1gjwrPbx04DvDvGc\nhUAXClX1ZzNd1DTm+T3gLyeY9qKq+l3gK8Cx03j5L1XVkcATgb+aqnGSXtaTMe9BAc8cp9m0au3Z\nHwMXtfU8jqabluMGph8HfKJ9vCPrXS+q6t+q6rUTTH4kTe8DU7Ub653t+/BeJl4/p3R31q2qOruq\nvrGjz59IkgXAx4ATquoH7ej9kzxinObfAf77JLO7Enh8VT0B2C/J6NdWN1bVke3fVTNW/AyYC6Hw\nfeDAdi/0D4FPwfa0H/u49VLguW2K7zOwZ3B2kn9I8rkkn05jXpKPtnvsFyZ5YLvH8fU0nf1tSPLc\nJJ9JcmWSRYOvmeQF7etcluQF49R/E3BlkqdNsowPAH68A+/NfYGfJ7lPuwxfSLI6yQPaZfhyknOB\nV05z2Uf3tu6fZN1ELz7mfX8n8LKpat2BZZxJ/x84IsmDq3EFzdeuf7Wdfizt+sUE691MSnJouwf6\ntSSvascd2A6vSbKq3Zse/D/5ULt3v67dw38pcEqSfx7Tbmk773VJJgvjvYHRI7yHJlnbPucd7bi9\n23lf1K5Dr2vHX53kQ8Dbk+zbrlNfSHJOu14d0e5hfzHNkeSvZPtR2rp2nR08on5bW+8X2uUiyTVJ\nPpzkiiTPH/Jt3Qf4JPDnVfUvA+P/F/CKcdpfRLNOPHC8mVXVD9reGgBuA+5sHz+s/Xy9J8l9hqxt\np5gLoQDwDeBJwHzg34Zo/x7g3DbFbxoz7etV9XTgVuBQmg/8lnaPfRXw39p2DwSeR7MX8QrgaOB0\nYOyG/5PtHtfjmXiP423Ay8cZ/6Ekl9BsjNYNsVyjfrfdWF9Fs0f0Ypp7RJ4CnMP2u8cXAC+oqr9t\nh4dd9h3xI+B7SR4/Ra2z6SPARmBtmtNHvwl8FjgqzSmEW6tq60D76a530/VG4CXAE4AntxvDVwBn\nVNXvs30DBECSXwF+E3hSu879gGZdf2dV/R539Q5gedvubeO89ilJLgVeSRPoAG8C/qJ9zn3S7BW/\nGDi/qpYBPxx4/v7AqVX1MuA04F3t+vctmvXqGe1yPBk4EzgQ+Hk77ye331wcXa4lwIJ2b/y1NJ8z\ngIfQrJNPAk4e/y38JYcBW6vq0jHjLwX2TTLeXcHvAf5ispkmeQywX1Vd1o56eFU9iWa93+EjrT7M\nlVD4JM1Kvm6C6dPphO/y9t/raDb8D6e5UY/230Xt46ur6g6aD8K3q+pOmju4x+5R/Nd2o3dRO69f\nUlXX0hwxHDZm0ouq6nCaDcFbprEMo6dkFgLPb+f70raOk2lu2Qe4su3McNQwyz74dbbpdm74VuB/\nTFZru/GdFVV1e1W9vqoeSbPhOYPmdNFxwLNpOnUcNNV6d3c9pKquaW/4vAx4GM3/yegG7S4btqq6\nnabn4o+kOb9930nmvWdVjfZLduc4099ZVY8GLgT+Szvut4APtOvRUpoN/0T1bKqqm9vHi4Ez2uc9\ni2ZjvhL4/STnAMuq6l+Bryf5KPD6NL0wj5roM7i5qn5cVT+muVdqGBfT7JycOc60iXbORjv7HHeP\nv11n/47tN+pSVaM9N5wP/M6Qte0UcyIUquq7wFe564f2Pu1h6oH88ob6diZeicZu9DbRnpMFHsP2\nc8c1yXMGvZpmr+goJj898hYmPqd+M7DfJM8dV7uRuBW4gmZP7ciqejzwmrbJ2I3BMMv+/9je8eG0\nVvaq2gjcAfz2JLXuM515zqQ0F5L3bAdvoPlK9+U09R7PmFNEE6x3M+nfk/x2e4rqMOBfaf5PHtVO\nf9Rg43ZDel5VnQD8O80GeKJ1/dY059anOu9/BtvXl43AC9sQXwJ8ZpJ6BtetfwH+ul3/Dqe5TnFL\nVa0AXgS8Ocm9gb9va59Pc2Q9ahPN+gcTfwan42XA7yR50eDIqvpcuwz7jBm/DfgoAxv9UUn2ogmN\nP6uqG9px9xsItSe29e8y7hEd4s2EqjoZINt75j6H5vD+yzQbskFXAX+b5BM0h+eT+TTwrCRfBn4K\nnEBzjn9Yn6K5UHwZzcZ9ovqvTLJlzOgPJfkZcG9gOt9sGT0lcx/g/9LceHPWwIfgbcCGIebzS8te\nVbckuTzJV4AvTaOmUW8FvjlRrVX1rR2Y50w5FDg3yS9oQnH0sP8i4PDRD/2gcda7u+OJSS5uH18M\n/A3w/raWC6vq2iRvAT6e5OU010BuH3j+XsD/SVI0G8zn07yv/5jkcOCvB9qeCpyX5Haao4G3jldQ\nVf0oyfVJjqA5lfQP7TnyO4A/aev7RJLn0HQYd/U4s3kD8L5s/+bTK4AnJHkWzTbqbJrO3D6Q5A7g\nZzSfl6e0NYwk+VGSrwLbaIJkh1XVnUmeB1w8zmfu3TQb+bHez/bTVoNeBhwMvLtdB15L0xv0B5P8\nlOYz/8d3p96Z5s1r0m4kyR6jFzaTfIzmNM8ls1jPvWi2M3ckeSPNKclzZ6seTW3OHClIc8RBae5l\n2YNmAzxrgdD6VeCi9hTXDcDrZrccTcUjBUlSZ05caJYkDcdQkCR1DAVJUsdQ0JyV5Ng0Hdf91mzX\nIu0qDAXNZctpbi5b3tcLjLnzVtrlGQqak9J0Nf4Emp5Ojx8Y/8okV6XpvPBN7biHp+kS+8o0HRc+\nLE23yZ8ZeN6703abnOTaJG9OchnwnCQvSdP195VJPpnkvm27Bye5oB1/ZZLHJTkzycsG5vuGJKfs\nlDdFwvsUNHcdQ9MN9neS3Jjk0TRdhRxDc3fyz5OMdmdwDvCmqrqgvVv3XsABU8z/xqo6DCDJg6rq\nfe3j19ME0d8D76Lp2+kP2yOK+9P0lfUp4O/aG7+OZ3tXIlLvDAXNVcvZ3rvnqnY4wIeq6ucAVXVT\n23fNgqq6oB33Cxiq24rBu3YPacNgb5oN/9p2/FNouzhoO0+8BbilDalHAQ8GLh/oPE3qnaGgOac9\nAngKcGjbD9A8mr6APjHpE+9qG3c9/Tq2h8yfDTw+Gzi27b/qRODIKeb9fuBEmt5CPziNmqS7zWsK\nmouOAz5SVQdV1cKqOoDmF+5uAV40cM5/n6r6CbAlybHtuHu3078PLG6H9waeOsnr7QX8KM3vGQz+\n2MvnaX7khrbH3l9rx18ALKPp8XMt0k5kKGguWk6z4R30SeDXgdXASJIr2P7bDi8ATk7yLeDrNL9j\ncB1wHvDt9t/LmdhrgEuAr9F0Ez3qFJofx7mK5rcGFgO0v2HxRZpuru/Y0YWUdoR9H0m7mPYC82XA\nc9rfZJB2Go8UpF1IksU0P7ryeQNBs8EjBUlSxyMFSVLHUJAkdQwFSVLHUJAkdQwFSVLHUJAkdf4T\nz6frnuL2yTkAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f3b9c9bfc50>"
+       "<matplotlib.figure.Figure at 0x7f15b19dfd68>"
       ]
      },
      "metadata": {},
@@ -211,41 +211,6 @@
     "plt.xticks(range(len(models_xAxis)), models_xAxis, size='small')\n",
     "plt.xlabel('Accuracy')\n",
     "plt.ylabel('Model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(87, 3298)\n",
-      "(1, 3298)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'LGBTQ+'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "testString = 'Who is that'\n",
-    "test = tfidf.transform(vectorizer.transform([testString]))\n",
-    "\n",
-    "print(X.shape)\n",
-    "print(test.shape)\n",
-    "\n",
-    "multiNB.fit(X, y)\n",
-    "multiNB.predict(test)[0]"
    ]
   },
   {
